# pass-craft

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.alpine.dev  Dockerfile.alpine.tree  Dockerfile.docker.client  Dockerfile.scratch  Dockerfile.scratch.glibc  README.md  README.zh.md  passwords.example.md
.github/workflows/: clean-old-runs-h.yml  cleanup.yml  docker-publish.yml  ghcr-clean-old.yml  ghcr-publish.yml  next-release.yml  window-release.yml
docs/: 迭代-01-代码改写-更换程序语言实现.md  迭代-03-代码编写-帮助信息使用英文.md  迭代-04-代码编写-输出信息风格确认.md  迭代-05-代码检查-检查平台注释编译.md  镜像管理.md
scripts/: README.md  local-build-scratch-in-docker.sh
src/: main.rs
