[package]
name = "pass-craft"
version = "0.3.0"
edition = "2021"
description = "A cross-platform password hash generation written in Rust"
authors = ["YeMiancheng <ymc.github@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ymc-github/pass-craft"
readme = "README.md"
keywords = ["password", "hash", "generator", "craft"]
categories = ["command-line-utilities", "password-programming"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
md5 = "0.7.0"
sha1 = "0.10.0"
sha2 = "0.10.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }


# Add this section if using non-standard paths
[[bin]]
name = "pass-craft"
path = "src/main.rs"  # or your actual main file path

# Or if it's a library:
# [lib]
# name = "pass_craft"
# path = "src/lib.rs"